y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 type_specifier: INT
    7               | VOID

    8 var_declaration: type_specifier identifier SEMI
    9                | type_specifier identifier LBRACE constant RBRACE SEMI

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt

   11 params: param_list
   12       | VOID
   13       | ε

   14 param_list: param_list COMMA param
   15           | param

   16 param: type_specifier identifier
   17      | type_specifier identifier LBRACE RBRACE

   18 compound_stmt: LCURLY local_declarations statement_list RCURLY

   19 local_declarations: local_declarations var_declaration
   20                   | ε

   21 statement_list: statement_list statement
   22               | ε

   23 statement: matched_stmt
   24          | unmatched_stmt

   25 expression_stmt: expression SEMI
   26                | SEMI

   27 matched_stmt: IF LPAREN expression RPAREN matched_stmt ELSE matched_stmt
   28             | WHILE LPAREN expression RPAREN matched_stmt
   29             | other_stmt

   30 unmatched_stmt: IF LPAREN expression RPAREN statement
   31               | IF LPAREN expression RPAREN matched_stmt ELSE unmatched_stmt
   32               | WHILE LPAREN expression RPAREN unmatched_stmt

   33 other_stmt: expression_stmt
   34           | compound_stmt
   35           | return_stmt

   36 return_stmt: RETURN SEMI
   37            | RETURN expression SEMI

   38 expression: var ASSIGN expression
   39           | simple_expression

   40 var: identifier
   41    | identifier LBRACE expression RBRACE

   42 simple_expression: additive_expression relop additive_expression
   43                  | additive_expression

   44 relop: LE
   45      | LT
   46      | GT
   47      | GE
   48      | EQ
   49      | NE

   50 additive_expression: additive_expression addop term
   51                    | term

   52 addop: PLUS
   53      | MINUS

   54 term: term mulop factor
   55     | factor

   56 mulop: TIMES
   57      | OVER

   58 factor: LPAREN expression RPAREN
   59       | var
   60       | call
   61       | constant

   62 call: identifier LPAREN args RPAREN

   63 args: arg_list
   64     | ε

   65 arg_list: arg_list COMMA expression
   66         | expression

   67 identifier: ID

   68 constant: NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 27 30 31
    ELSE (259) 27 31
    WHILE (260) 28 32
    RETURN (261) 36 37
    INT (262) 6
    VOID (263) 7 12
    ID (264) 67
    NUM (265) 68
    ASSIGN (266) 38
    EQ (267) 48
    NE (268) 49
    LT (269) 45
    LE (270) 44
    GT (271) 46
    GE (272) 47
    PLUS (273) 52
    MINUS (274) 53
    TIMES (275) 56
    OVER (276) 57
    LPAREN (277) 10 27 28 30 31 32 58 62
    RPAREN (278) 10 27 28 30 31 32 58 62
    LBRACE (279) 9 17 41
    RBRACE (280) 9 17 41
    LCURLY (281) 18
    RCURLY (282) 18
    SEMI (283) 8 9 25 26 36 37
    COMMA (284) 14 65
    ERROR (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    program (32)
        on left: 1
        on right: 0
    declaration_list (33)
        on left: 2 3
        on right: 1 2
    declaration (34)
        on left: 4 5
        on right: 2 3
    type_specifier (35)
        on left: 6 7
        on right: 8 9 10 16 17
    var_declaration (36)
        on left: 8 9
        on right: 4 19
    fun_declaration (37)
        on left: 10
        on right: 5
    params (38)
        on left: 11 12 13
        on right: 10
    param_list (39)
        on left: 14 15
        on right: 11 14
    param (40)
        on left: 16 17
        on right: 14 15
    compound_stmt (41)
        on left: 18
        on right: 10 34
    local_declarations (42)
        on left: 19 20
        on right: 18 19
    statement_list (43)
        on left: 21 22
        on right: 18 21
    statement (44)
        on left: 23 24
        on right: 21 30
    expression_stmt (45)
        on left: 25 26
        on right: 33
    matched_stmt (46)
        on left: 27 28 29
        on right: 23 27 28 31
    unmatched_stmt (47)
        on left: 30 31 32
        on right: 24 31 32
    other_stmt (48)
        on left: 33 34 35
        on right: 29
    return_stmt (49)
        on left: 36 37
        on right: 35
    expression (50)
        on left: 38 39
        on right: 25 27 28 30 31 32 37 38 41 58 65 66
    var (51)
        on left: 40 41
        on right: 38 59
    simple_expression (52)
        on left: 42 43
        on right: 39
    relop (53)
        on left: 44 45 46 47 48 49
        on right: 42
    additive_expression (54)
        on left: 50 51
        on right: 42 43 50
    addop (55)
        on left: 52 53
        on right: 50
    term (56)
        on left: 54 55
        on right: 50 51 54
    mulop (57)
        on left: 56 57
        on right: 54
    factor (58)
        on left: 58 59 60 61
        on right: 54 55
    call (59)
        on left: 62
        on right: 60
    args (60)
        on left: 63 64
        on right: 62
    arg_list (61)
        on left: 65 66
        on right: 63 65
    identifier (62)
        on left: 67
        on right: 8 9 10 16 17 40 41 62
    constant (63)
        on left: 68
        on right: 9 61


State 0

    0 $accept: • program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    type_specifier    go to state 6
    var_declaration   go to state 7
    fun_declaration   go to state 8


State 1

    6 type_specifier: INT •

    $default  reduce using rule 6 (type_specifier)


State 2

    7 type_specifier: VOID •

    $default  reduce using rule 7 (type_specifier)


State 3

    0 $accept: program • $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list •
    2 declaration_list: declaration_list • declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    type_specifier   go to state 6
    var_declaration  go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration •

    $default  reduce using rule 3 (declaration_list)


State 6

    8 var_declaration: type_specifier • identifier SEMI
    9                | type_specifier • identifier LBRACE constant RBRACE SEMI
   10 fun_declaration: type_specifier • identifier LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11

    identifier  go to state 12


State 7

    4 declaration: var_declaration •

    $default  reduce using rule 4 (declaration)


State 8

    5 declaration: fun_declaration •

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end •

    $default  accept


State 10

    2 declaration_list: declaration_list declaration •

    $default  reduce using rule 2 (declaration_list)


State 11

   67 identifier: ID •

    $default  reduce using rule 67 (identifier)


State 12

    8 var_declaration: type_specifier identifier • SEMI
    9                | type_specifier identifier • LBRACE constant RBRACE SEMI
   10 fun_declaration: type_specifier identifier • LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 13
    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 13

   10 fun_declaration: type_specifier identifier LPAREN • params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 16

    $default  reduce using rule 13 (params)

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19
    param           go to state 20


State 14

    9 var_declaration: type_specifier identifier LBRACE • constant RBRACE SEMI

    NUM  shift, and go to state 21

    constant  go to state 22


State 15

    8 var_declaration: type_specifier identifier SEMI •

    $default  reduce using rule 8 (var_declaration)


State 16

    7 type_specifier: VOID •
   12 params: VOID •

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 7 (type_specifier)


State 17

   16 param: type_specifier • identifier
   17      | type_specifier • identifier LBRACE RBRACE

    ID  shift, and go to state 11

    identifier  go to state 23


State 18

   10 fun_declaration: type_specifier identifier LPAREN params • RPAREN compound_stmt

    RPAREN  shift, and go to state 24


State 19

   11 params: param_list •
   14 param_list: param_list • COMMA param

    COMMA  shift, and go to state 25

    $default  reduce using rule 11 (params)


State 20

   15 param_list: param •

    $default  reduce using rule 15 (param_list)


State 21

   68 constant: NUM •

    $default  reduce using rule 68 (constant)


State 22

    9 var_declaration: type_specifier identifier LBRACE constant • RBRACE SEMI

    RBRACE  shift, and go to state 26


State 23

   16 param: type_specifier identifier •
   17      | type_specifier identifier • LBRACE RBRACE

    LBRACE  shift, and go to state 27

    $default  reduce using rule 16 (param)


State 24

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN • compound_stmt

    LCURLY  shift, and go to state 28

    compound_stmt  go to state 29


State 25

   14 param_list: param_list COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 17
    param           go to state 30


State 26

    9 var_declaration: type_specifier identifier LBRACE constant RBRACE • SEMI

    SEMI  shift, and go to state 31


State 27

   17 param: type_specifier identifier LBRACE • RBRACE

    RBRACE  shift, and go to state 32


State 28

   18 compound_stmt: LCURLY • local_declarations statement_list RCURLY

    $default  reduce using rule 20 (local_declarations)

    local_declarations  go to state 33


State 29

   10 fun_declaration: type_specifier identifier LPAREN params RPAREN compound_stmt •

    $default  reduce using rule 10 (fun_declaration)


State 30

   14 param_list: param_list COMMA param •

    $default  reduce using rule 14 (param_list)


State 31

    9 var_declaration: type_specifier identifier LBRACE constant RBRACE SEMI •

    $default  reduce using rule 9 (var_declaration)


State 32

   17 param: type_specifier identifier LBRACE RBRACE •

    $default  reduce using rule 17 (param)


State 33

   18 compound_stmt: LCURLY local_declarations • statement_list RCURLY
   19 local_declarations: local_declarations • var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 22 (statement_list)

    type_specifier   go to state 34
    var_declaration  go to state 35
    statement_list   go to state 36


State 34

    8 var_declaration: type_specifier • identifier SEMI
    9                | type_specifier • identifier LBRACE constant RBRACE SEMI

    ID  shift, and go to state 11

    identifier  go to state 37


State 35

   19 local_declarations: local_declarations var_declaration •

    $default  reduce using rule 19 (local_declarations)


State 36

   18 compound_stmt: LCURLY local_declarations statement_list • RCURLY
   21 statement_list: statement_list • statement

    IF      shift, and go to state 38
    WHILE   shift, and go to state 39
    RETURN  shift, and go to state 40
    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    LCURLY  shift, and go to state 28
    RCURLY  shift, and go to state 42
    SEMI    shift, and go to state 43

    compound_stmt        go to state 44
    statement            go to state 45
    expression_stmt      go to state 46
    matched_stmt         go to state 47
    unmatched_stmt       go to state 48
    other_stmt           go to state 49
    return_stmt          go to state 50
    expression           go to state 51
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 37

    8 var_declaration: type_specifier identifier • SEMI
    9                | type_specifier identifier • LBRACE constant RBRACE SEMI

    LBRACE  shift, and go to state 14
    SEMI    shift, and go to state 15


State 38

   27 matched_stmt: IF • LPAREN expression RPAREN matched_stmt ELSE matched_stmt
   30 unmatched_stmt: IF • LPAREN expression RPAREN statement
   31               | IF • LPAREN expression RPAREN matched_stmt ELSE unmatched_stmt

    LPAREN  shift, and go to state 60


State 39

   28 matched_stmt: WHILE • LPAREN expression RPAREN matched_stmt
   32 unmatched_stmt: WHILE • LPAREN expression RPAREN unmatched_stmt

    LPAREN  shift, and go to state 61


State 40

   36 return_stmt: RETURN • SEMI
   37            | RETURN • expression SEMI

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41
    SEMI    shift, and go to state 62

    expression           go to state 63
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 41

   58 factor: LPAREN • expression RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    expression           go to state 64
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 42

   18 compound_stmt: LCURLY local_declarations statement_list RCURLY •

    $default  reduce using rule 18 (compound_stmt)


State 43

   26 expression_stmt: SEMI •

    $default  reduce using rule 26 (expression_stmt)


State 44

   34 other_stmt: compound_stmt •

    $default  reduce using rule 34 (other_stmt)


State 45

   21 statement_list: statement_list statement •

    $default  reduce using rule 21 (statement_list)


State 46

   33 other_stmt: expression_stmt •

    $default  reduce using rule 33 (other_stmt)


State 47

   23 statement: matched_stmt •

    $default  reduce using rule 23 (statement)


State 48

   24 statement: unmatched_stmt •

    $default  reduce using rule 24 (statement)


State 49

   29 matched_stmt: other_stmt •

    $default  reduce using rule 29 (matched_stmt)


State 50

   35 other_stmt: return_stmt •

    $default  reduce using rule 35 (other_stmt)


State 51

   25 expression_stmt: expression • SEMI

    SEMI  shift, and go to state 65


State 52

   38 expression: var • ASSIGN expression
   59 factor: var •

    ASSIGN  shift, and go to state 66

    $default  reduce using rule 59 (factor)


State 53

   39 expression: simple_expression •

    $default  reduce using rule 39 (expression)


State 54

   42 simple_expression: additive_expression • relop additive_expression
   43                  | additive_expression •
   50 additive_expression: additive_expression • addop term

    EQ     shift, and go to state 67
    NE     shift, and go to state 68
    LT     shift, and go to state 69
    LE     shift, and go to state 70
    GT     shift, and go to state 71
    GE     shift, and go to state 72
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 43 (simple_expression)

    relop  go to state 75
    addop  go to state 76


State 55

   51 additive_expression: term •
   54 term: term • mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 51 (additive_expression)

    mulop  go to state 79


State 56

   55 term: factor •

    $default  reduce using rule 55 (term)


State 57

   60 factor: call •

    $default  reduce using rule 60 (factor)


State 58

   40 var: identifier •
   41    | identifier • LBRACE expression RBRACE
   62 call: identifier • LPAREN args RPAREN

    LPAREN  shift, and go to state 80
    LBRACE  shift, and go to state 81

    $default  reduce using rule 40 (var)


State 59

   61 factor: constant •

    $default  reduce using rule 61 (factor)


State 60

   27 matched_stmt: IF LPAREN • expression RPAREN matched_stmt ELSE matched_stmt
   30 unmatched_stmt: IF LPAREN • expression RPAREN statement
   31               | IF LPAREN • expression RPAREN matched_stmt ELSE unmatched_stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    expression           go to state 82
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 61

   28 matched_stmt: WHILE LPAREN • expression RPAREN matched_stmt
   32 unmatched_stmt: WHILE LPAREN • expression RPAREN unmatched_stmt

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    expression           go to state 83
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 62

   36 return_stmt: RETURN SEMI •

    $default  reduce using rule 36 (return_stmt)


State 63

   37 return_stmt: RETURN expression • SEMI

    SEMI  shift, and go to state 84


State 64

   58 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 85


State 65

   25 expression_stmt: expression SEMI •

    $default  reduce using rule 25 (expression_stmt)


State 66

   38 expression: var ASSIGN • expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    expression           go to state 86
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 67

   48 relop: EQ •

    $default  reduce using rule 48 (relop)


State 68

   49 relop: NE •

    $default  reduce using rule 49 (relop)


State 69

   45 relop: LT •

    $default  reduce using rule 45 (relop)


State 70

   44 relop: LE •

    $default  reduce using rule 44 (relop)


State 71

   46 relop: GT •

    $default  reduce using rule 46 (relop)


State 72

   47 relop: GE •

    $default  reduce using rule 47 (relop)


State 73

   52 addop: PLUS •

    $default  reduce using rule 52 (addop)


State 74

   53 addop: MINUS •

    $default  reduce using rule 53 (addop)


State 75

   42 simple_expression: additive_expression relop • additive_expression

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    var                  go to state 87
    additive_expression  go to state 88
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 76

   50 additive_expression: additive_expression addop • term

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    var         go to state 87
    term        go to state 89
    factor      go to state 56
    call        go to state 57
    identifier  go to state 58
    constant    go to state 59


State 77

   56 mulop: TIMES •

    $default  reduce using rule 56 (mulop)


State 78

   57 mulop: OVER •

    $default  reduce using rule 57 (mulop)


State 79

   54 term: term mulop • factor

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    var         go to state 87
    factor      go to state 90
    call        go to state 57
    identifier  go to state 58
    constant    go to state 59


State 80

   62 call: identifier LPAREN • args RPAREN

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    $default  reduce using rule 64 (args)

    expression           go to state 91
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    args                 go to state 92
    arg_list             go to state 93
    identifier           go to state 58
    constant             go to state 59


State 81

   41 var: identifier LBRACE • expression RBRACE

    ID      shift, and go to state 11
    NUM     shift, and go to state 21
    LPAREN  shift, and go to state 41

    expression           go to state 94
    var                  go to state 52
    simple_expression    go to state 53
    additive_expression  go to state 54
    term                 go to state 55
    factor               go to state 56
    call                 go to state 57
    identifier           go to state 58
    constant             go to state 59


State 82

   27 matched_stmt: IF LPAREN expression • RPAREN matched_stmt ELSE matched_stmt
   30 unmatched_stmt: IF LPAREN expression • RPAREN statement
   31               | IF LPAREN expression • RPAREN matched_stmt ELSE unmatched_stmt

    RPAREN  shift, and go to state 95


State 83

   28 matched_stmt: WHILE LPAREN expression • RPAREN matched_stmt
   32 unmatched_stmt: WHILE LPAREN expression • RPAREN unmatched_stmt

    RPAREN  shift, and go to state 96


State 84

   37 return_stmt: RETURN expression SEMI •

    $default  reduce using rule 37 (return_stmt)


State 85

   58 factor: LPAREN expression RPAREN •

    $default  reduce using rule 58 (factor)


State 86

   38 expression: var ASSIGN expression •

    $default  reduce using rule 38 (expression)


State 87

   59 factor: var •

    $default  reduce using rule 59 (factor)


State 88

   42 simple_expression: additive_expression relop additive_expression •
   50 additive_expression: additive_expression • addop term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 42 (simple_expression)

    addop  go to state 76


State 89

   50 additive_expression: additive_expression addop term •
   54 term: term • mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 50 (additive_expression)

    mulop  go to state 79


State 90

   54 term: term mulop factor •

    $default  reduce using rule 54 (term)


State 91

   66 arg_list: expression •

    $default  reduce using rule 66 (arg_list)


State 92

   62 call: identifier LPAREN args • RPAREN

    RPAREN  shift, and go to state 97


State 93

   63 args: arg_list •
   65 arg_list: arg_list • COMMA expression

    COMMA  shift, and go to state 98

    $default  reduce using rule 63 (args)


State 94
